<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="plm_text" translatable="false">"Playlist maker"</string>
    <string name="search" translatable="false">"Поиск"</string>
    <string name="my_text_lowercase">Медиатека</string>
    <string name="settings" translatable="false">"Настройки"</string>
    <string name="mediateka" translatable="false">"Медиатека"</string>
    <string name="new_playlist" translatable="false">"Новый плейлист"</string>
    <string name="playlist_name" translatable="false">"Название*"</string>
    <string name="playlist_description" translatable="false">"Описание"</string>
    <string name="create_button" translatable="false">"Создать"</string>
    <string name="Time" translatable="false">Длительность</string>
    <string name="Album" translatable="false">Альбом</string>
    <string name="media_empty_favtracks" translatable="false">Ваша медиатека пуста</string>
    <string name="media_empty_playlists" translatable="false">Вы не создали ни одного плейлиста</string>
    <string name="btn_media_text" translatable="false">Новый плейлист</string>
    <string name="Genre" translatable="false">Жанр</string>
    <string name="Country" translatable="false">Страна</string>
    <string name="Year" translatable="false">Год</string>
    <string name="dark_theme" translatable="false">"Темная тема"</string>
    <string name="s_app" translatable="false">"Поделится приложением"</string>
    <string name="share" translatable="false">"Поделится"</string>
    <string name="redact" translatable="false">"Редактировать информацию"</string>
    <string name="delete" translatable="false">"Удалить плейлист"</string>
    <string name="t_support" translatable="false">"Написать в поддержку"</string>
    <string name="u_agreement" translatable="false">"Пользовательское соглашение"</string>
    <string name="url_yandex" translatable="false">"https://yandex.ru/legal/practicum_offer/ru"</string>
    <string name="url_share" translatable="false">"https://practicum.yandex.ru/android-developer"</string>
    <string name="theme" translatable="false">"Сообщение разработчикам и разработчицам приложения Playlist Maker"</string>
    <string name="message" translatable="false">"Спасибо разработчикам и разработчицам за крутое приложение!"</string>
    <string name="mail" translatable="false">"novikovivan06@gmail.com"</string>
    <string name="empty_error" translatable="false">"Ничего не нашлось"</string>
    <string name="history_button" translatable="false">"Очистить историю"</string>
    <string name="history_text" translatable="false">"Вы искали"</string>
    <string name="mediator_fav" translatable="false">"Избранные треки"</string>
    <string name="mediator_playlists" translatable="false">"Плейлисты"</string>
    <string name="media_player_url" translatable="false">https://audio-ssl.itunes.apple.com/itunes-assets/AudioPreview112/v4/ac/c7/d1/acc7d13f-6634-495f-caf6-491eccb505e8/mzaf_4002676889906514534.plus.aac.p.m4a</string>
    <string name="internet_error" translatable="false">"Проблемы со связью

        Загрузка не удалась. Проверьте подключение к интернету"</string>
    <string name="update">Обновить</string>
    <string name="end_creating_playlist">Завершить создание плейлиста?</string>
    <string name="cancel_save">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="save">Сохранить</string>
    <string name="edit_playlist">Редактировать плейлист</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="playlist_empty">Вы не создалини одного плейлиста</string>

    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="minutes_count">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>