<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.PlaylistMaker.Main"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"


    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/indentation_24">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/indentation_4"
            android:layout_marginTop="@dimen/indentation_4"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="@dimen/indentation_4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indentation_12"
                android:layout_marginTop="@dimen/indentation_10"
                android:layout_marginBottom="@dimen/indentation_12"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center_vertical"
                android:text="@string/plm_text"
                android:textColor="@color/white"
                android:textSize="@dimen/medium22" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_search"
        style="@style/Button_ma_style"
        android:text="@string/search"
        app:icon="@drawable/ic_search_19x19" />

    <Button
        android:id="@+id/btn_media"
        style="@style/Button_ma_style"
        android:text="@string/my_text_lowercase"
        app:icon="@drawable/ic_music_icon_20x20" />

    <Button
        android:id="@+id/btn_settings"
        style="@style/Button_ma_style"
        android:layout_marginBottom="28dp"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings_19x20" />


</LinearLayout>