<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker.Settings"
    tools:context=".ui.settings.fragments.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/indentation_4"
            android:layout_marginTop="@dimen/indentation_4"
            android:layout_marginEnd="@dimen/indentation_24"
            android:layout_marginBottom="@dimen/indentation_4"
            tools:ignore="UselessParent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/indentation_48">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="@dimen/indentation_12"
                    android:layout_marginTop="@dimen/indentation_10"
                    android:layout_marginEnd="84dp"
                    android:layout_marginBottom="@dimen/indentation_12"
                    android:fontFamily="@font/ys_display_medium"
                    android:gravity="center_vertical"
                    android:text="@string/settings"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="@dimen/medium22" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <FrameLayout
        android:id="@+id/settings_frameL1"
        style="@style/FrameLayout_sa_style"
        android:layout_marginTop="@dimen/indentation_24">

        <TextView
            style="@style/TextView_sa_style"
            android:layout_width="match_parent"
            android:text="@string/dark_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            style="@style/Switch.Theme.PlaylistMaker"
            android:layout_width="56dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/indentation_10"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="11dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/settings_frameL2"
        style="@style/FrameLayout_sa_style">

        <TextView
            style="@style/TextView_sa_style"
            android:text="@string/s_app" />

        <Button
            android:id="@+id/btn_share"
            style="@style/Button_settings"
            android:background="@android:color/transparent"
            android:paddingStart="4dp"
            android:paddingTop="3dp"
            android:paddingEnd="4dp"
            android:paddingBottom="3dp"
            app:icon="@drawable/ic_share_16x18" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/settings_frameL3"
        style="@style/FrameLayout_sa_style">

        <TextView
            style="@style/TextView_sa_style"
            android:text="@string/t_support" />

        <Button
            android:id="@+id/btn_support"
            style="@style/Button_settings"
            android:background="@android:color/transparent"
            android:paddingStart="2dp"
            android:paddingTop="3.1dp"
            android:paddingEnd="2dp"
            android:paddingBottom="2.9dp"
            app:icon="@drawable/ic_support_20x18" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/settings_frameL4"
        style="@style/FrameLayout_sa_style">

        <TextView
            style="@style/TextView_sa_style"
            android:text="@string/u_agreement" />

        <Button
            android:id="@+id/btn_user_agreement"
            style="@style/Button_settings"
            android:background="@android:color/transparent"
            android:paddingStart="8dp"
            android:paddingTop="5dp"
            android:paddingEnd="8dp"
            android:paddingBottom="5dp"
            app:icon="@drawable/ic_arrow_forward_8x14" />
    </FrameLayout>


</LinearLayout>


