<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.PlaylistMaker.AudioPlayer"
    android:id="@+id/nestedScrollViewAudioplayer">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />


        <Button
            android:id="@+id/back_to_search"
            android:layout_width="@dimen/indentation_48"
            android:layout_height="@dimen/indentation_48"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:paddingStart="@dimen/indentation_12"
            android:paddingTop="@dimen/indentation_12"
            android:paddingEnd="@dimen/indentation_12"
            android:paddingBottom="@dimen/indentation_12"
            app:icon="@drawable/ic_left_arrow_24x24"
            app:iconTint="?attr/colorOnPrimary"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/iv_trackImage"
            android:layout_width="0dp"
            android:layout_height="312dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/back_to_search" />

        <TextView
            android:id="@+id/tv_track_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/medium22"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/iv_trackImage" />

        <TextView
            android:id="@+id/tv_artist_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/regular_14"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_track_name" />

        <ImageButton
            android:id="@+id/iv_create_playlist"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginTop="52dp"
            android:background="@null"
            android:src="?attr/playlistButtonSrc"
            app:cornerRadius="69dp"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_artist_name" />

        <ImageButton
            android:id="@+id/btn_play"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="28dp"
            android:background="@android:color/transparent"
            android:src="@drawable/button__play_100x100"
            app:layout_constraintEnd_toStartOf="@id/iv_like"
            app:layout_constraintStart_toEndOf="@id/iv_create_playlist"
            app:layout_constraintTop_toBottomOf="@id/tv_artist_name"
            app:tint="?attr/colorOnPrimary" />

        <ImageButton
            android:id="@+id/iv_like"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginTop="54dp"
            android:background="@null"
            android:src="?attr/playlistLikeButtonSrc"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toBottomOf="@id/tv_artist_name" />

        <TextView
            android:id="@+id/tv_time_track"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_horizontal"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/regular_14"
            app:layout_constraintEnd_toEndOf="@id/btn_play"
            app:layout_constraintStart_toStartOf="@id/btn_play"
            app:layout_constraintTop_toBottomOf="@id/btn_play" />


        <LinearLayout
            android:id="@+id/ll_timeTrack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_time_track">

            <TextView
                style="@style/AudioPlayer.TextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="8dp"
                android:gravity="start"
                android:text="@string/Time" />

            <TextView
                android:id="@+id/tvTime"
                style="@style/AudioPlayer.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_albumName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_timeTrack">

            <TextView
                style="@style/AudioPlayer.TextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="8dp"
                android:gravity="start"
                android:text="@string/Album" />

            <TextView
                android:id="@+id/tvAlbumName"
                style="@style/AudioPlayer.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_albumName">

            <TextView
                style="@style/AudioPlayer.TextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="8dp"
                android:gravity="start"
                android:text="@string/Year" />

            <TextView
                android:id="@+id/tvYear"
                style="@style/AudioPlayer.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_ganr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llYear">

            <TextView
                style="@style/AudioPlayer.TextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="8dp"
                android:gravity="start"
                android:text="@string/Genre" />

            <TextView
                android:id="@+id/tvGenre"
                style="@style/AudioPlayer.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_ganr">

            <TextView
                style="@style/AudioPlayer.TextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="8dp"
                android:gravity="start"
                android:text="@string/Country" />

            <TextView
                android:id="@+id/tvCountry"
                style="@style/AudioPlayer.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="end" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>